--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,9 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
 # Gradle files
 .gradle/
 build/
 
 # Local configuration file (sdk path, etc)
 local.properties
-.kotlin/
 
 # Log/OS Files
 *.log
@@ -40,6 +25,11 @@ render.experimental.xml
 # Keystore files
 *.jks
 *.keystore
+
+# General
+.DS_Store
+.externalNativeBuild
+.kotlin/
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
